--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^16.13.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^16.13.0",
+    "react-firebaseui": "^4.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0"
   },
   "scripts": {
