--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,12 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Dependencies
         run: npm install
+        env:
+          CI: ""
       - name: Build
         run: npm run build
+        env:
+          CI: ""
       - name: Archive Production Artifact
         uses: actions/upload-artifact@v2
         with:
